# Ball-Game

./: .gitignore  BallGame.sln  BallGame.sln.DotSettings  BallsGame.doc  CMakeLists.txt  README.md
BallGame/: BFS.cpp  BFS.h  BallGame.cpp  BallGame.h  BallGame.vcxproj  BallGame.vcxproj.filters  Condition.cpp  Condition.h  Constants.h  Structures.cpp  Structures.h  main.cpp  stdafx.cpp  stdafx.h
data/: input.txt
include/: Condition.hpp  Structures.hpp
src/: BFS.cpp  Ball-Game.cpp  Condition.cpp  Structures.cpp
